<resources>
    <string name="app_name">FilmsRF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="films_splash_screen_title">FILMS RF</string>
    <string name="popcorn_image_description">Popcorn Image</string>
    <string name="connection_error_description">Connection error</string>
    <string name="connection_error">Connection Error!</string>
    <string name="reload_connection_btn_text">Reload connection</string>
    <string name="star_rate_description">Star rate</string>
    <string name="directed_by">Directed by:\n%s</string>
    <string name="trailer_subtitle">Trailer:</string>
    <string name="overview_subtitle">Overview:</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Password</string>
    <string name="sign_in_btn_text">SIGN IN</string>
    <string name="sign_up_btn_text">SIGN UP</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Please enter a password of at least 6 characters</string>
    <string name="account_exists_different_credentials">An account already exists with the same email address</string>
    <string name="email_already_in_use">Email already in use in other account</string>
    <string name="token_expired">Token expired, please sign in again</string>
    <string name="user_not_found">User do not exist</string>
    <string name="netwok_error">Network error</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="verification_email_sent">Verification email has been sent</string>
    <string name="verification_email_sent_failed">Verification email could not be sent</string>
    <string name="welcome">Welcome:</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="forgot_your_password_reset_here">Forgot your password? Reset here</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_message">Enter the email address associated with your account\n\nWe will send you a link to reset your password</string>
    <string name="reset_password_send_btn">Send</string>
    <string name="check_mailbox">Please check your mailbox</string>
    <string name="reset_password_cancel_btn">Cancel</string>
    <string name="error_sending_mail">Link could not be sent: %s</string>
    <string name="verification_mail_sent">Verification link has been sent</string>
    <string name="error_verification_email">Error sending verification email</string>
    <string name="studio_location">Studio Location:</string>
    <string name="click_here_to_see_the_map">Click here to see the map!</string>
</resources>