<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.Login">

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:elevation="20dp"
        android:indeterminateDrawable="@drawable/loading_anim"
        android:indeterminateDuration="1500"
        android:visibility="gone" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_background"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/fascinate_inline"
                android:gravity="center_horizontal"
                android:text="@string/films_splash_screen_title"
                android:textColor="@color/splash_screen_text_color"
                android:textSize="40sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/popcorn_image_description"
                android:src="@drawable/popcorn_avatar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilLoginEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/hint_text_color"
                app:boxStrokeColor="@color/light_purple"
                app:helperTextTextColor="@color/light_blue"
                app:hintTextColor="@color/light_blue"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/hint_text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint_text"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilLoginPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/hint_text_color"
                app:boxStrokeColor="@color/light_purple"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/hint_text_color"
                app:helperTextTextColor="@color/light_blue"
                app:hintTextColor="@color/light_blue"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/hint_text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint_text"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="@string/forgot_your_password_reset_here"
                android:textColor="#ff7b00"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/orange_gradient_button_background"
                android:enabled="true"
                android:text="@string/sign_in_btn_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/red_gradient_button_background"
                android:enabled="true"
                android:text="@string/sign_up_btn_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</FrameLayout>